apps/api/.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mswa-api
  namespace: mswa-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mswa-api
  template:
    metadata:
      labels:
        app: mswa-api
    spec:
      containers:
      - name: api
        image: ghcr.io/mobility-scooter-project/mobility-scooter-web-app/api:bryan-kube-deployment
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
