apps/api/.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mswa-api
spec:
  selector:
    app: mswa-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
